Version 2.2.0

* Added the ability to remove S-Mods from ships!
  - Costs credits per S-Mod removed; no bonus XP is awarded if S-Mods are removed this way
  - Requires finishing a certain side-quest to unlock
* Slight UI changes for the ship picker
* "Automate" option can no longer be applied to ships with equipped modular, non-automated fighter LPCs
  - This limitation should prevent converted automated ships from maintaining their crewed fighter LPCs
* Fixed "Select D-Mod" confirmation popup not showing the list of D-Mods
* Fixed "Automate" option not actually deducting credits upon confirmation
* Some text changes:
  - Text now displays the name of the selected ship
  - Text should now have properly-highlighted words
* Major code and rules.csv refactors



Version 2.1.0

* "Random D-Mod" option now has a slider to choose how many random D-Mods are added per confirm
* Changed the dialogue flow when interacting with D-MOD; now a bit more receptive to "Press 1" spam
* Major code and rules.csv refactors



Version 2.0.0 (Update for Starsector 0.97)

* Updated to Starsector 0.97



Version 1.0.1

* Fixed the LunaLib soft dependency
    - This means this mod no longer requires either LunaLib or Java 8 to run
* "Select D-Mod" option now correctly sorts the selected D-Mods based on their display name
* Changed some text
* Refactored some code



Version 1.0.0

* "Select D-Mod" option can now select for multiple D-Mods at once!
  - D-Mod selection still abides by vanilla D-Mod rules (e.g. can only add D-Mods up to usual max, Compromised Armor/Hull being mutually-exclusive)
  - Price will change based on existing and planned D-Mods, but total price for adding 5 D-Mods should remain the same as before.
  - Now also displays D-Mod images to help identify desired D-Mods
* "Select D-Mod" and "Automate" prices now instead consider the base value of the selected ship's pristine equivalent